# deep-think-ratio

./: .gitignore  AGENTS.md  pyproject.toml  run.py  run.sh  run_dtr.sh
models/: README.md  dummy.yaml  gpt-oss-120b.yaml
scripts/: __init__.py  calc_deep_think_tokens.sh  calc_dtr.sh  calc_heatmaps.sh  calc_think_n.sh  calc_think_n_bottom.sh  common.py  eval.py  prepare_deep_think_tokens_results.sh  run_aime24.sh  run_many.py  run_think_n_queue.sh  serve_vllm.py  validate_aime24.sh
src/: __init__.py
src/aggregation/: __init__.py  aggregate_dtr_length_scatter.py  aggregate_dtr_pass1_correlation.py  aggregate_dtr_problem_difficulty.py  average_experiment_summary.py  average_postprocess.py  dtr_length_scatter.py  dtr_pass1_correlation.py  dtr_problem_difficulty.py
src/deep_think_tokens_project/: __init__.py  dtr.py  dtr_pass1_correlation.py  hooks.py  io.py  jsd.py  prepare_results.py  think_n.py  think_n_bottom.py  utils.py
tests/: test_aggregate_dtr_length_scatter.py  test_aggregate_dtr_pass1_correlation.py  test_aggregate_dtr_problem_difficulty.py  test_aggregation_average_experiment_summary.py  test_aggregation_average_postprocess.py  test_aime24_task_filters.py  test_aime24_utils.py  test_collect_aime24.py  test_deep_think_tokens_project.py  test_dtr.py  test_dtr_problem_difficulty.py  test_jsd_heatmap.py  test_package_imports.py  test_plot_dtr_length_scatter.py  test_plot_dtr_pass1_correlation.py  test_plot_rendering.py  test_repetition_metrics.py  test_runners.py  test_runtime_config.py  test_think_n_bottom_experiment.py  test_think_n_experiment.py
(+22 files in other folders)
